--- a/client/modules/treo-core/css/treo/treo-light-theme.css
+++ b/client/modules/treo-core/css/treo/treo-light-theme.css
@@ -15125,7 +15125,7 @@ table.table > thead th {
 }
 
 @media screen and (min-width: 768px) {
-  #main > .list-container > .list > .table {
+  #main > .list-container > .list > .table:not(.fixed-header-table) {
     min-width: 100%;
     width: auto;
   }
@@ -15146,7 +15146,7 @@ table.table > thead th {
   }
 
   .catalog-tree-panel {
-    z-index: 2;
+    z-index: 3;
   }
 }
 
